# Dash-Celery-Websockets-Practice-Project

./: .gitignore  README.md  api_main.py  app.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml
application/: __init__.py
application/services/: __init__.py  progress_service.py  task_service.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
domain/: __init__.py  progress.py  text_processing.py
infrastructure/: __init__.py
infrastructure/celery/: __init__.py  app.py  config.py  tasks.py
interfaces/: __init__.py
interfaces/api/: __init__.py  routes.py
interfaces/web/: __init__.py  dash_app.py
models/: task_models.py
requirements/: base.txt
